# tg-auth

./: .dockerignore  .env.dev  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  index.html  pyproject.toml  tg_auth.db
.github/workflows/: ci.yaml
tests/: conftest.py
tests/adapters/database/: test_users_repository.py
tests/adapters/jwt/: test_token_issuer.py
tests/domains/use_cases/: test_jwt_verifier.py
tests/presentors/rest/: test_routes.py
tg_auth/: __main__.py  app_factory.py  config.py  index.html  routers.py
tg_auth/adapters/database/: __main__.py  alembic.ini  base.py  config.py  di.py  tables.py  uow.py  utils.py
tg_auth/adapters/database/migrations/: env.py  script.py.mako
tg_auth/adapters/database/migrations/versions/: 2026_05_10_191282743bea_initial_commit.py
tg_auth/adapters/database/repositories/: users.py
tg_auth/adapters/healthcheck/: database.py  di.py
tg_auth/adapters/jwt/: di.py  tokens.py
tg_auth/application/: config.py  logging.py
tg_auth/domain/: di.py  uow.py
tg_auth/domain/entities/: telegram.py
tg_auth/domain/use_cases/: fetch_user_by_id.py  upsert_user_from_telegram.py
tg_auth/domains/: di.py
tg_auth/domains/entities/: healthcheck.py  tokens.py  user.py
tg_auth/domains/interfaces/: healthcheck.py  tokens.py  users.py
tg_auth/domains/use_cases/: check_readiness.py  fetch_user_by_id.py  refresh_tokens.py  upsert_user_from_telegram.py
tg_auth/presentors/rest/: app_factory.py
tg_auth/presentors/rest/controllers/: __init__.py  auth.py  system.py
tg_auth/presentors/rest/templates/: app.html  index.html
